<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#DDF3FD">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/calculator"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#02121E"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/no1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/first_no"
            android:autofillHints="no"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/no2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/second_no"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:inputType="number"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/resultContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/inputContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textStyle="bold"
            android:backgroundTint="#033A59"/>

        <RelativeLayout
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/addLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_result"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/subLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/subtraction_result"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/addLabel"/>
            <TextView
                android:id="@+id/multiplyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/multiply_result"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/subLabel"/>
            <TextView
                android:id="@+id/divLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/divide_result"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/multiplyLabel"/>

            <TextView
                android:id="@+id/addR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_toEndOf="@+id/addLabel"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/subR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/subLabel"
                android:layout_below="@+id/addR"/>

            <TextView
                android:id="@+id/multR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subR"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/multiplyLabel"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/divR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/divLabel"
                android:layout_below="@+id/multR"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>